Design: Premium hero and branding updates

--- a/index.html
+++ b/index.html
@@ -3,7 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My Google AI Studio App</title>
+    <title>DevHub by Finora</title>
+    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><rect width=%22100%22 height=%22100%22 rx=%2220%22 fill=%22%235A5A40%22/><text y=%22.9em%22 font-size=%2280%22 font-family=%22serif%22 font-style=%22italic%22 font-weight=%22bold%22 fill=%22white%22 x=%2215%22>F</text></svg>">
+    <meta name="description" content="A collaborative platform for developers to share, discover, and upvote high-quality resources." />
+    <meta property="og:title" content="DevHub by Finora" />
+    <meta property="og:description" content="Discover the best tools for your next project. Curated by developers." />
+    <meta property="og:image" content="https://picsum.photos/seed/devhub/1200/630" />
+    <meta property="og:type" content="website" />
+    <meta name="twitter:card" content="summary_large_image" />
   </head>
   <body>
     <div id="root"></div>
